Fazendo o primeiro projeto no HTML5

--- a/Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -5,6 +5,26 @@
         <title>Felipe Magalhães</title>
     </head>
     <body>
-        Felipe Magalhães
+        <header>
+            <img src="Felipe.jpeg" height="200" width="197" alt="Foto de Felipe"
+            <h1>Felipe Magalhães</h1>
+        </header>
+        <section>
+            <header>
+                <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                    <img src="linkedin.webp" height="50" width="50" alt="Imagem do Linkedin"
+                </header>
+                    <p>Meu nome é Felipe Magalhães de Aguiar, sou professor de Física com graduação em Licenciatura 
+                    em Física e Mestrado em Ciência dos Materiais com ênfase sem Física da Matéria Condensada e atualmente
+                    estou cursando Engenharia de Software, para ter acesso ao meu perfil no linkedin bastar clicar 
+                    <a href="https://www.linkedin.com/in/felipe-magalh%C3%A3es-de-aguiar-a0a15b230/"target="_blank">aqui.</a> 
+                    Para me contatar basta me enviar um <a href="mailto:felipemaguiar@gmail.com">e-mail</a>.</p>
+            </article>
+        </section>
+        <footer></footer>
     </body>
 </html>
