--- a/Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -25,7 +25,7 @@
             </article>
         </section>
         <footer>
-            <ol>
+            <ul class="contacts_list">
                 <li>
                     <a href="mailto:felipemaguiar@gmail.com">felipemaguiar@gmail.com</a>
                 </li>    
